<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.seda.shoppingapp.activies.ui.home.ProductsFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_product" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.seda.shoppingapp.activies.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.seda.shoppingapp.activies.ui.notifications.OrdersFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_orders" />
</navigation>